--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+ body {
+  @apply font-primary bg-primary text-white leading-loose;
+ }
+ .text-outline {
+   -webkit-text-stroke: 1px #ffffff;
+ }
+ .text-outline-hover {
+   -webkit-text-stroke: 1px #00ff99;
+ }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
